crates/math-core/tests/snapshots/error_test__sub_sub.snap
---
source: crates/math-core/tests/error_test.rs
expression: x_2_3 y
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:4 ]
   │
 1 │ x_2_3 y
   │    ┬  
   │    ╰── duplicate
───╯
